--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Typing Master</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="mainDiv">
-        <div class="centerDiv">
-            <h1>Welcome To Typing Speed Test</h1>
-            <h2 id="msg"></h2>
-            <br>
-            <textarea id="mywords" cols="100" rows="10" placeholder="Remember, be nice!"></textarea>
-            <br>
-            <button id="btn" class="mainbtn">Start</button>
-        </div>
+      <div class="centerDiv">
+        <h1>Welcome To Typing Speed Test</h1>
+        <h2 id="msg"></h2>
+        <br />
+        <textarea
+          id="mywords"
+          cols="100"
+          rows="10"
+          placeholder="Remember, be nice!"
+        ></textarea>
+        <br />
+        <button id="btn" class="mainbtn">Start</button>
+      </div>
     </div>
-</body>
-<script src="script.js"></script>
+  </body>
+  <script src="script.js"></script>
 </html>
